@@ -1,3 +1,9 @@
+2001-09-30  Cristy  <cristy@mystic.es.dupont.com>
+	* switched strcpy to strncpy to help protect against buffer
+	  overflow.
+	* ltdl.c passed int reference but a long was needed;
+	  caused a fault on Solaris 64-bit compiles.
+
 2001-09-25  Cristy  <cristy@mystic.es.dupont.com>
 	* Removed most lint complaints from the source.
 	* strtod() returns different results on Linux and Solaris for 0x13.
